Changes in ccaPP version 0.2.0

    + Functions for CCA now force consistency of Spearman, Kendall and 
      quadrant correlation.
    
    + Bugfix in CCAproj(): now correctly wrapped around ccaProj().
    
    + permTest(): argument 'cl' is now preferred over argument 'ncores' for 
      parallel computing.



Changes in ccaPP version 0.1.1

    + Using package parallel now to detect the number of available processor 
      cores rather than OpenMP.
    
    + Internally created parallel cluster in permTest() is now stopped via 
      on.exit().
    
    + Bugfix in permTest(): random number streams for parallel clusters 
      supplied by the user are only reset if a seed is supplied.
      