@@ -1,4 +1,5 @@
 S3method(print,cca)
+S3method(print,maxCor)
 S3method(print,permTest)
 export(CCAgrid)
 export(CCAproj)
@@ -11,6 +12,8 @@ export(corQuadrant)
 export(corSpearman)
 export(fastMAD)
 export(fastMedian)
+export(maxCorGrid)
+export(maxCorProj)
 export(permTest)
 import(Rcpp)
 import(RcppArmadillo)
