@@ -1,12 +1,19 @@
 Changes in ccaPP version 0.2.0
 
-    + Functions for CCA now force consistency of Spearman, Kendall and 
+    + Functions ccaGrid() and ccaProj() now force consistency of the Spearman, 
+      Kendall and quadrant correlation.
+    
+    + New functions maxCorGrid() and maxCorProj() for maximum correlation, 
+      which retain the argument for consistency of the Spearman, Kendall and 
       quadrant correlation.
     
-    + Bugfix in CCAproj(): now correctly wrapped around ccaProj().
+    + permTest(): now using the new functions maxCorGrid() and maxCorProj() 
+      rather than ccaGrid() and ccaProj().
     
     + permTest(): argument 'cl' is now preferred over argument 'ncores' for 
       parallel computing.
+    
+    + Bugfix in CCAproj(): now correctly wrapped around ccaProj().
 
 
 
